# fastapi-tortoise

./: .env.example  .gitignore  .pre-commit-config.yaml  404.html  Dockerfile  LICENSE  Makefile  README.md  docker-compose-dev.yml  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: build.yml
app/: initializer.py  main.py
app/config/: __init__.py  base.py  cfg.py  db.py  openapi.py
app/core/: __init__.py
app/core/exceptions/: exceptions.py  handlers.py
app/core/models/: __init__.py
app/core/models/pydantic/: __init__.py
app/core/models/tortoise/: __init__.py
app/core/routers/: __init__.py  hello.py  items.py
app/utils/: __init__.py
app/utils/api/: __init__.py  router.py
docs/: index.md
scripts/: docker-dev-down.sh  docker-dev-up.sh
search/: search_index.json
tests/: client.py  conftest.py
tests/test_api/: test_hello.py  test_items.py
tests/test_utils/: test_api_router.py
