[tool.poetry]
name = "tortoise-fastapi"
version = "0.0.1"
description = "The template for building scalable web APIs based on FastAPI, Tortoise ORM and others."
authors = ["prostomarkeloff"]
license = "MIT"
packages = [
    { include = "app" },
]


[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.44.0"
tortoise-orm = "^0.15.4"
pydantic = "^1.1"
asyncpg = "^0.20.0"
loguru = "^0.3.2"

[tool.poetry.dev-dependencies]
black = {version = "^18.3-alpha.0", allows-prereleases = true}
pytest = "^5.3"
pytest-asyncio = "^0.10.0"
pre-commit = "^1.20"
uvicorn = "^0.10.8"
pytest-cov = "^2.8"
mkdocs = "^1.0"
mkdocs-material = "^4.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
